# mochi-cfg

./: Make.rules  Makefile.am  README.md  configure.ac
include/: mochi-cfg.h
maint/: mochi-cfg.pc.in
src/: Makefile.subdir  mochi-cfg.c
